# kvision

./: .gitignore  Pipfile  data  kvision.ipynb  main.py  pyproject.toml  requirements.txt
kvision/: __init__.py  __main__.py  config.py  evaluate.py  kvision.ipynb  load.py  model.py  predict.py  preprocess.py  train.py  utils.py
scripts/: prepare_data_directory.py
