[tool.poetry]
name = "kvision"
version = "0.1.0"
description = ""
authors = ["Kenneth V. Domingo <hello@kvdomingo.xyz>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
loguru = "^0.6.0"
numpy = "^1.23.2"
pandas = "^1.4.4"
Pillow = "^9.2.0"
python-dotenv = "^0.21.0"
scikit-learn = "^1.1.2"
tensorflow = "^2.9.2"
tensorflow-addons = "^0.17.1"
tqdm = "^4.64.1"
matplotlib = "^3.5.3"
opencv-contrib-python = "<4.6"
tensorflow-hub = "^0.12.0"
click = "^8.1.3"
PyYAML = "^6.0"
h5py = "^3.7.0"

[tool.poetry.dev-dependencies]
black = "^22.8.0"
isort = "^5.10.1"
jupyter = "^1.0.0"
jupyterlab = "^3.4.5"
notebook = "^6.4.12"
jupyter-nbextensions-configurator = "^0.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.isort]
profile = "black"